syntax = "proto3";

package ru.sladkov.protobuf.generated;

option java_multiple_files = true;

message BorderValuesRequest {
  int64 firstValue = 1;
  int64 lastValue = 2;
}

message NumberResponse {
  int64 value = 1;
}

service NumberService {
  rpc getNumbers(BorderValuesRequest) returns (stream NumberResponse);
}