syntax = "proto3";

package ru.sladkov.protobuf.generated;

option java_multiple_files = true;

message BorderValuesMessage {
  int64 firstValue = 1;
  int64 lastValue = 2;
}

message NumberMessage {
  int64 value = 1;
}

message Empty {}

service RemoteNumberService {
  rpc getNumberValues(BorderValuesMessage) returns (stream NumberMessage);
}